--- a/Bootstrap/css/styles.css
+++ b/Bootstrap/css/styles.css
@@ -1,5 +1,16 @@
 body{
-    /* font-family: 'Montserrat'; */
+    font-family: 'Montserrat';
+}
+h1,h2,h3,h4,h5,h6{
+    font-family: 'Montserrat', sans-serif;
+    
+}
+p{
+    color: #8f8f8f;
+}
+.big-heading{
+    font-size: 3rem;
+    line-height: 1.5;
 }
 #title {
     background-color: #ff4c68;
@@ -8,11 +19,7 @@ body{
 .container-fluid{
     padding: 3% 15% 7%;
 }
-h1{
-    font-family: 'Montserrat', sans-serif;
-    font-size: 3rem;
-    line-height: 1.5;
-}
+
 
 /* Navigation bar  */
 .navbar{
@@ -52,16 +59,14 @@ h1{
     position: relative;
     z-index: 1;
 }
+.feater-text{
+    font-size: 1.5rem;
+}
 .feature-box{
     text-align: center;
     padding: 5%;
 }
-h3{
-    font-family: 'Montserrat', sans-serif;
-}
-p{
-    color: #8f8f8f;
-}
+
 
 .icon{
     color: #ef8172;
@@ -81,8 +86,7 @@ p{
  .carousel-item{
     padding: 7% 15%;
  }
- h2{
-    font-family: 'Montserrat', sans-serif;
+ testimonial-text{
     font-size: 2.5rem;
     line-height: 1.5;
  }
@@ -107,6 +111,14 @@ p{
  #pricing{
     padding: 100px;
     text-align: center;
+ }
+ .section-heading{
+    font-size: 2.5rem;
+    line-height: 1.5;
+ }
+ .price-text{
+    font-size: 2.5rem;
+    line-height: 1.5;
  }
  .pricing-column {
     padding: 3% 2%;
